--- a/views/adminWelcome.ejs
+++ b/views/adminWelcome.ejs
@@ -99,7 +99,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Add Faculty</a>
+        <a href="#addteacher">Add Faculty</a>
         <a href="#">View&Modify</a>
       </div>
     </div>
