--- a/public/css/tests.css
+++ b/public/css/tests.css
@@ -1,10 +1,104 @@
-button.tests {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+
+.tests, .questions{
+float: left;
 }
+.questions{
+    padding-left: 25%;
+   
+}
+.questions input{
+    width: 100%;
+}
+.questions h3{
+text-align:center;
+background-color: rgb(159, 240, 240);
+}
+
+.tests{
+    top:0;
+    width: 275px;
+    height: 525px;
+    position: absolute;
+    overflow-y: auto;
+}
+.tests h3{
+    background-color:white;
+    color: black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.tests ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 300px;
+    background-color: gray;
+    border-radius: 5px;
+    
+}
+
+.tests li {
+    display: block;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: 1px solid #555;
+    border-radius: 5px;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+.tests li:hover {
+    background-color: #555;
+    color: white;
+}
+h3{
+    text-align: center;
+}
+
+
+
+/* table CSS*/
+
+.ques-table td{
+    border: 1px solid black;
+}
+.ques-table table{
+border-collapse: collapse;
+width: 100%;
+}
+
+.ques-table td{
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 35px;
+  text-align: center;
+  font-size: 100%;
+  font-weight: bold;
+}
+thead{
+    background-color:#9bf766;
+
+}
+thead td{
+    font-size: 110%;
+    font-weight: bold;
+}
+tr:hover {
+    background-color: rgb(231, 221, 221);
+    }
+    .button{
+        font-size: 100% !important;
+        font-weight: bold;
+        line-height: 5px !important;
+        background-color: white !important;
+    }
+    
+    .button-edit:hover{
+        background-color: #c1a4f0 !important;
+    }
+    .button-trash:hover{
+        background-color: #f0a4a4 !important;
+    }
